// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CognitoConstruct + Identity Providers synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"CognitoPoolB9CB508B\\": {
      \\"Type\\": \\"AWS::Cognito::UserPool\\",
      \\"Properties\\": {
        \\"AutoVerifiedAttributes\\": [
          \\"email\\"
        ],
        \\"EmailConfiguration\\": {
          \\"EmailSendingAccount\\": \\"DEVELOPER\\",
          \\"SourceArn\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:aws:ses:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":\\",
                {
                  \\"Ref\\": \\"AWS::AccountId\\"
                },
                \\":identity/tester@sender.com\\"
              ]
            ]
          }
        },
        \\"LambdaConfig\\": {},
        \\"UsernameAttributes\\": [
          \\"email\\"
        ],
        \\"UserPoolName\\": \\"dear-users\\"
      }
    },
    \\"CognitoPoolCient1A73565E\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolClient\\",
      \\"Properties\\": {
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"AllowedOAuthFlows\\": [
          \\"code\\"
        ],
        \\"AllowedOAuthFlowsUserPoolClient\\": true,
        \\"AllowedOAuthScopes\\": [
          \\"phone\\",
          \\"email\\",
          \\"openid\\",
          \\"aws.cognito.signin.user.admin\\",
          \\"profile\\"
        ],
        \\"CallbackURLs\\": [
          \\"https://localhost:3000/\\"
        ],
        \\"ClientName\\": \\"dear-users-client\\",
        \\"DefaultRedirectURI\\": \\"https://localhost:3000/\\",
        \\"GenerateSecret\\": false,
        \\"LogoutURLs\\": [
          \\"https://localhost:3000/\\"
        ],
        \\"SupportedIdentityProviders\\": [
          \\"COGNITO\\",
          \\"Facebook\\",
          \\"Google\\"
        ],
        \\"WriteAttributes\\": [
          \\"email\\",
          \\"name\\"
        ]
      }
    },
    \\"CognitoPoolDomain2AB88D72\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolDomain\\",
      \\"Properties\\": {
        \\"Domain\\": \\"https://myapp.custom.domain\\",
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"CustomDomainConfig\\": {
          \\"CertificateArn\\": \\"arn:aws:acm:us-east-1:1234\\"
        }
      }
    },
    \\"CognitoPoolFacebookIdP8D179BE9\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolIdentityProvider\\",
      \\"Properties\\": {
        \\"ProviderName\\": \\"Facebook\\",
        \\"ProviderType\\": \\"Facebook\\",
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"AttributeMapping\\": {
          \\"email\\": \\"email\\",
          \\"name\\": \\"name\\"
        },
        \\"ProviderDetails\\": {
          \\"client_id\\": \\"123412341\\",
          \\"client_secret\\": \\"12341asdas12341adf\\",
          \\"authorize_scopes\\": \\"public_profile,email\\"
        }
      }
    },
    \\"CognitoPoolGoogleIdP09966FB6\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolIdentityProvider\\",
      \\"Properties\\": {
        \\"ProviderName\\": \\"Google\\",
        \\"ProviderType\\": \\"Google\\",
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"AttributeMapping\\": {
          \\"email\\": \\"email\\",
          \\"name\\": \\"name\\"
        },
        \\"ProviderDetails\\": {
          \\"client_id\\": \\"12341324.apps.googleusercontent.com\\",
          \\"client_secret\\": \\"123412341\\",
          \\"authorize_scopes\\": \\"profile email openid\\"
        }
      }
    }
  }
}"
`;

exports[`CognitoConstruct + Lambda Triggers synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"CognitoPostConfirmServiceRole7954D5B6\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"CognitoPostConfirmServiceRoleDefaultPolicyD365441B\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"ses:SendEmail\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"dynamodb:*\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:aws:dynamodb:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":*:table/USERS\\"
                    ]
                  ]
                },
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:aws:dynamodb:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":*:table/USERS/index/*\\"
                    ]
                  ]
                }
              ]
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"CognitoPostConfirmServiceRoleDefaultPolicyD365441B\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"CognitoPostConfirmServiceRole7954D5B6\\"
          }
        ]
      }
    },
    \\"CognitoPostConfirm749659CE\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParametersd358b3264af92fbdf048839a0ef0ab94ff4dd0a11acddfca5dd7779bfe6d7045S3BucketAECFA94C\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersd358b3264af92fbdf048839a0ef0ab94ff4dd0a11acddfca5dd7779bfe6d7045S3VersionKey2E2F78E3\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersd358b3264af92fbdf048839a0ef0ab94ff4dd0a11acddfca5dd7779bfe6d7045S3VersionKey2E2F78E3\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"cognitoPostConfirm.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"CognitoPostConfirmServiceRole7954D5B6\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs10.x\\"
      },
      \\"DependsOn\\": [
        \\"CognitoPostConfirmServiceRoleDefaultPolicyD365441B\\",
        \\"CognitoPostConfirmServiceRole7954D5B6\\"
      ]
    },
    \\"CognitoPostConfirmPostConfirmationCognito02BB4149\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"CognitoPostConfirm749659CE\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"cognito-idp.amazonaws.com\\"
      }
    },
    \\"CognitoPoolB9CB508B\\": {
      \\"Type\\": \\"AWS::Cognito::UserPool\\",
      \\"Properties\\": {
        \\"AutoVerifiedAttributes\\": [
          \\"email\\"
        ],
        \\"EmailConfiguration\\": {
          \\"EmailSendingAccount\\": \\"DEVELOPER\\",
          \\"SourceArn\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:aws:ses:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":\\",
                {
                  \\"Ref\\": \\"AWS::AccountId\\"
                },
                \\":identity/tester@sender.com\\"
              ]
            ]
          }
        },
        \\"LambdaConfig\\": {
          \\"PostConfirmation\\": {
            \\"Fn::GetAtt\\": [
              \\"CognitoPostConfirm749659CE\\",
              \\"Arn\\"
            ]
          }
        },
        \\"UsernameAttributes\\": [
          \\"email\\"
        ],
        \\"UserPoolName\\": \\"dear-users\\"
      }
    },
    \\"CognitoPoolCient1A73565E\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolClient\\",
      \\"Properties\\": {
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"ClientName\\": \\"dear-users-client\\",
        \\"GenerateSecret\\": false
      }
    }
  },
  \\"Parameters\\": {
    \\"AssetParametersd358b3264af92fbdf048839a0ef0ab94ff4dd0a11acddfca5dd7779bfe6d7045S3BucketAECFA94C\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"d358b3264af92fbdf048839a0ef0ab94ff4dd0a11acddfca5dd7779bfe6d7045\\\\\\"\\"
    },
    \\"AssetParametersd358b3264af92fbdf048839a0ef0ab94ff4dd0a11acddfca5dd7779bfe6d7045S3VersionKey2E2F78E3\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"d358b3264af92fbdf048839a0ef0ab94ff4dd0a11acddfca5dd7779bfe6d7045\\\\\\"\\"
    },
    \\"AssetParametersd358b3264af92fbdf048839a0ef0ab94ff4dd0a11acddfca5dd7779bfe6d7045ArtifactHashB95F72FD\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"d358b3264af92fbdf048839a0ef0ab94ff4dd0a11acddfca5dd7779bfe6d7045\\\\\\"\\"
    }
  }
}"
`;

exports[`CognitoConstruct synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"CognitoPoolB9CB508B\\": {
      \\"Type\\": \\"AWS::Cognito::UserPool\\",
      \\"Properties\\": {
        \\"AutoVerifiedAttributes\\": [
          \\"email\\"
        ],
        \\"EmailConfiguration\\": {
          \\"EmailSendingAccount\\": \\"DEVELOPER\\",
          \\"SourceArn\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:aws:ses:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":\\",
                {
                  \\"Ref\\": \\"AWS::AccountId\\"
                },
                \\":identity/tester@sender.com\\"
              ]
            ]
          }
        },
        \\"LambdaConfig\\": {},
        \\"UsernameAttributes\\": [
          \\"email\\"
        ],
        \\"UserPoolName\\": \\"dear-users\\"
      }
    },
    \\"CognitoPoolCient1A73565E\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolClient\\",
      \\"Properties\\": {
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"ClientName\\": \\"dear-users-client\\",
        \\"GenerateSecret\\": false
      }
    }
  }
}"
`;
